# ris-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  recherche-systemprompt.md
src/ris_mcp/: __init__.py  cache.py  client.py  config.py  server.py
src/ris_mcp/adapters/: __init__.py  content_html.py  content_xml.py  response.py
src/ris_mcp/tools/: __init__.py  _common.py  bundesrecht.py  judikatur.py  landesrecht.py  local.py  recherche.py
