[project]
name = "ris-mcp"
version = "0.1.0"
description = "Lokaler MCP-Server fuer die oesterreichische RIS-OGD-API (Bundesrecht und Judikatur)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Heinz" }]
dependencies = [
    "fastmcp>=0.4.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "tenacity>=8.3",
    "structlog>=24.1",
    "lxml>=5.2",
    "beautifulsoup4>=4.12",
    "markdownify>=0.12",
    "platformdirs>=4.2",
]

[project.optional-dependencies]
pdf = ["pypdf>=4.2"]

[project.scripts]
ris-mcp = "ris_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "vcrpy>=6.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ris_mcp"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
